[package]
name = "maelstrom-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "async-comm-service"
path = "src/async_comm_main.rs"

[[bin]]
name = "crdt-service"
path = "src/crdt_main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.104", features = ["raw_value"] }
tokio = { version = "1.32.0", features = ["full"] }
